--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 *,
 *::before,
 *::after {
+    text-decoration: none;
     box-sizing: border-box;
 }
 .a11y-hidden {
@@ -17,7 +18,55 @@
     clip-path: polygon(0 0, 0 0, 0 0);
 }
 body {
-  font-size: 10px;
+  font-size: 13px;
   font-family: 'Open Sans', sans-serif;
+  line-height: 1.2;
+}
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
+/*  */
+.title {
+  text-align: center;
+}
+
+.board {
+  font-size: 2em;
+  display: flex;
+  justify-content: space-around;
+}
+.status {
+  width: 30%;
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+}
+.score-count, .life-count {
+  padding-left: 10px;
+}
+.keyboard {
+  display: flex;
+  flex-direction: column;
+}
+.keyboard-top, .keyboard-mid, .keyboard-bottom {
+  display: flex;
+  justify-content: center;
+}
+.key {
+  position: relative;
+  margin: 5px;
+  border: 1px solid #ccc;
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+}
+kbd {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 3em;
+}
