--- a/css/style.css
+++ b/css/style.css
@@ -62,11 +62,20 @@ ul {
   width: 100px;
   height: 100px;
   border-radius: 10px;
+  transition: all 0.07s;
 }
-kbd {
+.key > kbd {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 3em;
+}
+.key-sign {
+  border: 4px solid red;
+}
+.key-hit{
+  transform: scale(1.2);
+  border: 4px solid yellow;
+  box-shadow: 0 0 10px yellow;
 }
