feat: Add filterKey for Error handling
TODO
- Add filterKey for Error handling
- Rename $key to selectedKey
- Correct normalize.css

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import 'nomalize.css';
+@import 'normalize.css';
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 /* 초기 설정 */
