--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ ul {
   height: 100px;
   border-radius: 10px;
   transition: all 0.07s;
+  cursor: pointer;
 }
 .keyboard-special > .key {
   width: 600px;
@@ -75,6 +76,32 @@ ul {
   transform: translate(-50%, -50%);
   font-size: 3em;
 }
+.hands{
+  display: flex;
+  justify-content: space-around;
+  font-size: 1.5em;
+}
+.left-hand, .right-hand{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px solid black;
+  padding: 5px;
+  margin-top: 50px;
+}
+.finger{
+  display: flex;
+  flex-direction: column;
+  margin: 0 10px;
+}
+
+.finger > input{
+  cursor: pointer;
+  align-self: center;
+}
+
+
+
 .key-sign {
   border: 4px solid red;
 }
@@ -82,4 +109,9 @@ ul {
   transform: scale(1.2);
   border: 4px solid yellow;
   box-shadow: 0 0 10px yellow;
+}
+.block-key{
+  transform: scale(0.8);
+  color: #ccc;
+  border: 0.1px dashed #ccc;
 }
