feat: Fix space-key keydown event
- Use `throttle` function for preventing unnecessary event loops
- space-key로 시작할 때, `key-hit` css가 제거되지 않는 이슈 해결

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,10 @@ ul {
   padding: 5px;
   margin-top: 50px;
 }
+.left-finger, .right-finger{
+  width: 30px;
+  height: 30px;  
+}
 .finger{
   display: flex;
   flex-direction: column;
